--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <header>
 		<div class="logo">
-            <img src="logo.png" alt="Sankardev Vidya Niketan Tetelisara" loading="lazy">
+            <img src="logo.png" alt="Sankardev Vidya Niketan <br> Tetelisara, Tetelisra, Nagaon" loading="lazy">
         </div>
 		<div class="title">Sankardev Vidya Niketan Tetelisara
 			<h2> 
